--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,15 +34,26 @@ body {
 
 }
 
-.immaginenave{
+.nave{
     position:absolute;
-    bottom:5vh;
-    left: 20vw;
+   
+    transform: rotateY(180deg);
+    pointer-events: none;
+    opacity: .20;
+    margin-top: 0px;
+    margin-bottom: 250px;
+    margin-left: 100px;
+    margin-right: 100px;
+    
 }
 
 .splash-btn{
     font-size: 2rem;
     margin-left: 2rem;
+    color: aliceblue;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, trasnform;
+
 }
 
 .splash-btn:first-child{
@@ -51,4 +62,63 @@ body {
 
 .splash-btn:first-child {
     margin-left: 0;
+}
+
+.btn:hover,.btn:focus,.btn:active {
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    -webkit-trasform scale(1.1);
+    transform: scale(1.1);
+
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+}
+
+.option-container{
+    width: 300px;
+    height: 150px;
+    display: flex;
+    background-color: aquamarine;
+    justify-content: center;
+    
+
+}
+.option-container:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.nave1-preview{
+    background-color: firebrick;
+    width: 20px;
+    height: 10px;
+    margin: 3px;
+}
+
+.nave2-preview{
+    background-color: red;
+    width: 30px;
+    height: 10px;
+    margin: 3px;
+}
+.nave3-preview{
+    background-color: chocolate;
+    width: 40px;
+    height: 10px;
+    margin: 3px;
+}
+.nave4-preview{
+    background-color: crimson;
+    width: 50px;
+    height: 10px;
+    margin: 3px;
+}
+.nave5-preview{
+    background-color: darkorange;
+    width: 50px;
+    height: 10px;
+    margin: 3px;
 }
